# learn-agents-1

./: .gitignore  LICENSE  basic_gemini_agent.py  main.py  pyproject.toml  self_healing_flow.py
src/content_review_flow/: main.py
src/content_review_flow/crews/reviewer_crew/: reviewer_crew.py
src/content_review_flow/crews/reviewer_crew/config/: agents.yaml  tasks.yaml
src/content_review_flow/crews/writer_crew/: writer_crew.py
src/content_review_flow/tools/: character_counter.py
src/self_healing_flow/: main.py
src/self_healing_flow/crews/reviewer_crew/config/: tasks.yaml
src/self_healing_flow/crews/writer_crew/config/: agents.yaml  tasks.yaml
