[project]
name = "learn-agents-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai[google-genai]>=1.15.2",
    "python-dotenv>=1.0.1",
]

[project.scripts]
kickoff = "self_healing_flow.main:kickoff"
plot = "self_healing_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/self_healing_flow"]

[tool.crewai]
type = "flow"

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
